[package]
name = "fmt2io"
version = "1.0.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "A bridge between std::io::Write and std::fmt::Write."
repository = "https://github.com/Kixunil/fmt2io"
readme = "README.md"
keywords = ["fmt", "io", "Write", "wrapper", "bridge"]
categories = ["rust-patterns"]
license = "MITNFA"

[badges]
maintenance = { status = "as-is" }
